--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.0.0",
     "@types/react": "^18.2.0",
+    "@types/xlsx": "^0.0.36",
     "jasmine-core": "~4.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
